templates/deployment.yaml
# Source: drupal/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-drupal
  labels:
    app.kubernetes.io/name: drupal
    helm.sh/chart: drupal-13.0.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: drupal
      app.kubernetes.io/instance: my-release
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drupal
        helm.sh/chart: drupal-13.0.1
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
      annotations:
        prometheus.io/port: "9117"
        prometheus.io/scrape: "true"
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: drupal
                    app.kubernetes.io/instance: my-release
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      serviceAccountName: my-release-drupal
      priorityClassName: ""
      # yamllint disable rule:indentation
      hostAliases:
        - hostnames:
          - status.localhost
          ip: 127.0.0.1
      # yamllint enable rule:indentation
      containers:
        - name: my-release-drupal
          image: docker.io/bitnami/drupal:10.0.2-debian-11-r1
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          livenessProbe:
            httpGet:
              path: /user/login
              port: http
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /user/login
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits: {}
            requests: {}
              # cpu: 300m
              # memory: 512Mi
          volumeMounts:
            - name: drupal-data
              mountPath: /bitnami/drupal
      volumes:
        - name: drupal-data
          persistentVolumeClaim:
            claimName: my-release-drupal-drupal
