templates/svc.yaml
# Source: drupal/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-drupal
  labels:
    app.kubernetes.io/name: drupal
    helm.sh/chart: drupal-13.0.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: "Cluster"
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app.kubernetes.io/name: drupal
    app.kubernetes.io/instance: my-release
