templates/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: drupal
    helm.sh/chart: drupal-13.0.1
  name: drupal
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: my-release-drupal
    weight: 100
  wildcardPolicy: None
